added sample note

--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,12 @@ numpy = "*"
 scipy = "*"
 pandas = "*"
 scikit-learn = "*"
+matplotlib = "*"
+seaborn = "*"
+xgboost = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.8"
