--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ scikit-learn = "*"
 matplotlib = "*"
 seaborn = "*"
 xgboost = "*"
+torch = {file = "https://download.pytorch.org/whl/cpu/torch-1.9.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
 
 [dev-packages]
 ipykernel = "*"
