--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,10 @@ scikit-learn = "*"
 matplotlib = "*"
 seaborn = "*"
 xgboost = "*"
-torch = {file = "https://download.pytorch.org/whl/cpu/torch-1.9.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
+torch = {file = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
+torchvision = {file = "https://download.pytorch.org/whl/cpu/torchvision-0.11.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
+tensorboard = "*"
+torchsummary = "*"
 
 [dev-packages]
 ipykernel = "*"
