--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ torch = {file = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp
 torchvision = {file = "https://download.pytorch.org/whl/cpu/torchvision-0.11.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
 tensorboard = "*"
 torchsummary = "*"
+jupyter = "*"
 
 [dev-packages]
 ipykernel = "*"
